# moshell

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  echo  setup.sh
analyzer/: Cargo.toml
analyzer/checker/: Cargo.toml
analyzer/checker/src/: define_std.rs  diagnostic.rs  engine.rs  first_pass.rs  import.rs  importer.rs  lib.rs  steps.rs
analyzer/checker/src/steps/: collect.rs  lib.rs  resolve.rs
analyzer/src/: analyzer.rs  builtin_types.rs  class.rs  classes.rs  context.rs  dead_symbols.rs  dependency.rs  diagnostic.rs  engine.rs  environment.rs  hir.rs  hoist.rs  identity.rs  import.rs  import_engine.rs  importer.rs  imports.rs  lang_types.rs  layers.rs  lib.rs  local.rs  module.rs  name.rs  reef.rs  relations.rs  resolver.rs  roots.rs  steps.rs  symbol.rs  type_context.rs  type_scheme.rs  types.rs  typing.rs  visibility.rs  visitable.rs
analyzer/src/environment/: symbols.rs  variables.rs
analyzer/src/steps/: collect.rs  resolve.rs  shared_diagnostics.rs  typing.rs
analyzer/src/steps/resolve/: diagnostics.rs  import.rs  symbol.rs
analyzer/src/steps/typing/: assign.rs  bounds.rs  coercion.rs  exploration.rs  function.rs  iterable.rs  lower.rs  magic.rs  structure.rs  view.rs
analyzer/src/types/: builtin.rs  class.rs  context.rs  ctx.rs  definition.rs  engine.rs  exploration.rs  function.rs  hir.rs  imports.rs  operator.rs  ty.rs  types.rs
analyzer/src/typing/: assign.rs  flow.rs  function.rs  iterable.rs  lower.rs  operator.rs  pfc.rs  registry.rs  schema.rs  shell.rs  user.rs  variable.rs
analyzer/system/: Cargo.toml
analyzer/system/src/: environment.rs  import.rs  import_engine.rs  lang_types.rs  layers.rs  lib.rs  locals.rs  name.rs  relations.rs  resolver.rs  types.rs  variables.rs
analyzer/system/src/locals/: context.rs  local.rs
analyzer/system/src/types/: class.rs  context.rs  types.rs
analyzer/tests/: collect_debug.rs  daemon_lib.msh  daemon_setup.msh  debug_sample.msh  functions.rs  var_types.rs
ast/: Cargo.toml
ast/src/: call.rs  callable.rs  control_flow.rs  function.rs  group.rs  lambda.rs  lib.rs  match.rs  operation.rs  range.rs  struct.rs  structure.rs  substitution.rs  test.rs  type.rs  use.rs  value.rs  variable.rs
cli/: Cargo.toml  Makefile  build.rs  vm
cli/examples/module/: const.msh  main.msh  math.msh
cli/lang_tests/: run.rs
cli/lang_tests/errors/: divide_by_zero.msh
cli/lang_tests/flow/: both_shadowing.msh  break_loop.msh  change_dir.msh  closure.msh  function_call.msh  glob.msh  global_shadowing.msh  local_shadowing.msh  logic_operator.msh  math.msh  option_parse.msh  preserve_pointer_info.msh  str_bytes.msh  str_split.msh
cli/lang_tests/import/: foo_consumer.msh  foo_lib.msh
cli/lang_tests/redir/: file_redirection.msh  mutate_before_process.msh  pipeline_exit.msh  pipeline_text.msh  process_substitution.msh  silent_sigpipe.msh
cli/samples/: foo.msh  math.msh
cli/src/: cli.rs  complete.rs  disassemble.rs  formatted_diagnostic.rs  formatted_parse_error.rs  lib.rs  library.rs  main.rs  pipeline.rs  render.rs  repl.rs  report.rs  runner.rs  source.rs  source_importer.rs  std.rs  terminal.rs
cli/src/complete/: bash.rs  bash_completion.sh
cli/src/render/: diagnostic.rs  parse_error.rs
compiler/: Cargo.toml
compiler/src/: analyzer.rs  bytecode.rs  captures.rs  constant_pool.rs  context.rs  emit.rs  externals.rs  lib.rs  locals.rs  structure.rs  type.rs
compiler/src/emit/: identifier.rs  invoke.rs  iterable.rs  jump.rs  native.rs  structure.rs
context/: Cargo.toml
context/macros/: Cargo.toml
context/macros/src/: lib.rs
fuzz/: Cargo.toml
lexer/: Cargo.toml  sample.msh
lexer/src/: delimiter.rs  err.rs  keyword.rs  lexer.rs  lib.rs  linter.rs  literal.rs  main.rs  reader.rs  test.rs  tests.rs  token.rs
lexer/tests/: escape.rs  sample.msh  sample.rs
parser/: Cargo.toml  README.md
parser/benches/: parse.rs  sample_install.msh
parser/src/: aspects.rs  ast.rs  context.rs  cursor.rs  diagnostic.rs  err.rs  helper.rs  lib.rs  moves.rs  parser.rs  source.rs
parser/src/aspects/: assign.rs  base_parser.rs  binary_operation.rs  binary_operation_parser.rs  binary_operations_parser.rs  block_parser.rs  call.rs  call_parser.rs  detached.rs  expr_list.rs  function_declaration.rs  group.rs  group_parser.rs  if_else.rs  lambda_def.rs  literal.rs  literal_parser.rs  loop.rs  match.rs  modules.rs  range.rs  redirection.rs  redirection_parser.rs  struct.rs  structure.rs  substitution.rs  substitution_parser.rs  test.rs  type.rs  use.rs  var_declaration.rs  var_declaration_parser.rs  var_reference.rs  var_reference_parser.rs
parser/src/ast/: callable.rs  control_flow.rs  flow_control.rs  group.rs  literal.rs  match.rs  operation.rs  range.rs  statement.rs  structure.rs  substitution.rs  test.rs  use.rs  value.rs  variable.rs
parser/src/parsers/: base_parser.rs  call_parser.rs  var_declaration_parser.rs
parser/tests/: err.rs  expr.rs  with_lexer.rs
parser/tests/integration/: err.rs  expr.rs  main.rs  with_lexer.rs
sandbox/: Cargo.toml  sample.msh  sandbox.msh
sandbox/scripts/: sandbox.msh
sandbox/src/: main.rs
vm/: .clang-format  CMakeLists.txt  Cargo.toml  Makefile  build.rs
vm/benches/: exec_benchmark.rs
vm/binding/: gc.rs  lib.rs  value.rs
vm/src/: byte_reader.cpp  byte_reader.h  conversions.cpp  conversions.h  errors.cpp  errors.h  interpreter.cpp  interpreter.h  main.cpp  pool.cpp  pool.h  stdlib_natives.cpp  stdlib_natives.h  types.cpp  types.h  vm.cpp  vm.h
vm/src/definitions/: bytecode_unit.cpp  bytecode_unit.h  function_definition.cpp  function_definition.h  loader.cpp  loader.h  module_definition.cpp  module_definition.h  pager.cpp  pager.h  struct_definition.h
vm/src/memory/: call_stack.cpp  call_stack.h  constant_pool.cpp  constant_pool.h  gc.cpp  gc.h  heap.cpp  heap.h  locals.cpp  locals.h  nix.cpp  nix.h  object.cpp  object.h  operand_stack.cpp  operand_stack.h  strings.cpp  strings.h
vm/tests/: errors.rs  flow.rs  lib.rs  runner.rs  stdlib.rs
vm/tests/integration/: errors.rs  flow.rs  main.rs  objects.rs  runner.rs  stdlib.rs
(+20 files in other folders)
