[package]
name = "checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
parser = { path = "../parser" }
context = { path = "../context" }

[dev-dependencies]
parser = { path = "../parser" }
pretty_assertions = "1.3.0"