[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
context = { path = "../context" }
enum-assoc = "1.0.0"
indexmap = "1.9.3"

[dev-dependencies]
parser = { path = "../parser" }
pretty_assertions = "1.3.0"
