[package]
name = "analyzer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
context = { path = "../context" }
parser = { path = "../parser" }
enum-assoc = "1.0.0"
indexmap = "2.0.2"
thiserror = "1.0.58"

[dev-dependencies]
parser = { path = "../parser" }
pretty_assertions = "1.3.0"
