[package]
name = "ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
src-macros = { path = "../context/macros" }
context = { path = "../context" }
lexer = { path = "../lexer" }

dbg-pls = { version = "0.3.5", features = ["derive"] }
enum-assoc = "1.0.0"
