[package]
name = "ast"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
src-macros = { path = "../context/macros" }
context = { path = "../context" }
lexer = { path = "../lexer" }

compact_str = "0.8.0"
