[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[test]]
name = "lang_tests"
path = "lang_tests/run.rs"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
context = { path = "../context", features = ["miette"] }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
analyzer = { path = "../analyzer" }
ast = { path = "../ast" }
compiler = { path = "../compiler" }
vm = { path = "../vm" }
directories = "5.0.1"

miette = { version = "5.9.0", features = ["fancy-no-backtrace"] }
thiserror = "1.0.38"
dbg-pls = { version = "0.4.1", features = ["pretty", "colors"] }
clap = { version = "4.2.2", features = ["derive"] }
libc = "0.2.147"

[dev-dependencies]
lang_tester = "0.7.3"
tempfile = "3.7.0"

[build-dependencies]
directories = "5.0.1"