[package]
name = "cli"
description = "CLI-related functionality for Moshell"
version = "0.1.0"
edition = "2021"
authors = ["Override-6", "syldium"]
license = "GPL-3.0-only"
repository = "https://github.com/moshell-lang/moshell"

[[bin]]
name = "moshell"
path = "src/main.rs"

[[test]]
name = "lang_tests"
path = "lang_tests/run.rs"
harness = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
context = { path = "../context", features = ["miette"] }
lexer = { path = "../lexer" }
parser = { path = "../parser" }
analyzer = { path = "../analyzer" }
ast = { path = "../ast" }
compiler = { path = "../compiler" }
vm = { path = "../vm" }
directories = "5.0.1"

miette = { version = "7.0.0", features = ["fancy-no-backtrace"] }
clap = { version = "4.2.2", features = ["derive"] }
clap_complete = "4.4.1"
reedline = "0.29.0"
is_executable = "1.0.1"
nu-ansi-term = "0.50.0"
nix = { version = "0.27.1", features = ["process", "term", "signal", "user"] }

[dev-dependencies]
lang_tester = "0.8.0"
tempfile = "3.7.0"

[package.metadata.deb]
name = "moshell"
maintainer = "syldium <syldium@mailo.com>"
extended-description = """\
A scripting language inspired by the shell, with \
static analysis."""
section = "devel"
assets = [
    ["target/release/moshell", "usr/bin/", "755"],
    ["lib/std.msh", "usr/share/moshell/lib/", "644"],
    ["lib/std/*", "usr/share/moshell/lib/std", "755"],
    ["completions/bash/moshell", "/usr/share/bash-completion/completions/", "755"]
]
