[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analyzer = { path = "../analyzer" }
ast = { path = "../ast" }
indexmap = "2.0.0"
num_enum = "0.7.0"
libc = "0.2.147"
context = { path = "../context" }

[dev-dependencies]
parser = { path = "../parser" }
pretty_assertions = "1.3.0"
