[package]
name = "parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lexer = { path = "../lexer" }
context = { path = "../context" }
ast = { path = "../ast" }

[dev-dependencies]
criterion = "0.7.0"
pretty_assertions = "1.3.0"

[[bench]]
name = "parse"
harness = false
