[package]
name = "checker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
analyzer-system = { path = "../system" }
ast = { path = "../../ast" }
parser = { path = "../../parser" }
context = { path = "../../context" }

[dev-dependencies]
