[package]
name = "src-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
context = { path = "../../context" }
syn = { version = "2.0.13", features = ["full"] }
quote = "1.0.26"

[lib]
proc-macro = true